--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="https://github.com/LeoLoureiro-code" target="_blank">
           <div class="socialmediaContainer">
             <div class="iconContainer">
-              <img src="../images/github.png" alt="Github icon" class="icon">
+              <img src="./images/github.png" alt="Github icon" class="icon">
             </div>
             <p class="socialmediaText">My Github</p>
           </div>
@@ -49,12 +49,12 @@
       <div class="TextCall">
         <a href="#">
           <div class="iconContainer phoneMessage">
-            <img src="../images/phone.png" alt="Phone icon" class="PhoneTextIcons">
+            <img src="./images/phone.png" alt="Phone icon" class="PhoneTextIcons">
           </div>
         </a>
         <a href="#">
           <div class="iconContainer phoneMessage">
-            <img src="../images/message.png" alt="Letter icon" class="PhoneTextIcons">
+            <img src="./images/message.png" alt="Letter icon" class="PhoneTextIcons">
           </div>
         </a>
       </div>
