--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="backgroundDiv">
     <div class="contentDiv">
       <div class="profilePictureDiv">
-        <img src="./images/perfil.jpg" alt="Photo of the creator" class="frontImg">
+        <img src="../images/perfil.jpg" alt="Photo of the creator" class="frontImg">
       </div>
       <h1>Leonardo Loureiro</h1>
       <p class="description">Front-end developer in training looking for challenges to keep learning!</p>
@@ -24,7 +24,7 @@
         <a href="https://www.linkedin.com/in/leonardo-loureiro-/" target="_blank">
           <div class="socialmediaContainer">
             <div class="iconContainer">
-              <img src="./images/linkedin.png" alt="Linkedin icon" class="icon">
+              <img src="../images/linkedin.png" alt="Linkedin icon" class="icon">
             </div>
             <p class="socialmediaText">Follow me in Linkedin</p>
           </div>
@@ -32,7 +32,7 @@
         <a href="https://twitter.com/ecw_leo" target="_blank">
           <div class="socialmediaContainer">
             <div class="iconContainer">
-              <img src="./images/twitter.png" alt="Twitter icon" class="icon">
+              <img src="../images/twitter.png" alt="Twitter icon" class="icon">
             </div>
             <p class="socialmediaText">Follow me in Twitter</p>
           </div>
@@ -40,7 +40,7 @@
         <a href="https://github.com/LeoLoureiro-code" target="_blank">
           <div class="socialmediaContainer">
             <div class="iconContainer">
-              <img src="./images/github.png" alt="Github icon" class="icon">
+              <img src="../images/github.png" alt="Github icon" class="icon">
             </div>
             <p class="socialmediaText">My Github</p>
           </div>
@@ -49,12 +49,12 @@
       <div class="TextCall">
         <a href="#">
           <div class="iconContainer phoneMessage">
-            <img src="./images/phone.png" alt="Phone icon" class="PhoneTextIcons">
+            <img src="../images/phone.png" alt="Phone icon" class="PhoneTextIcons">
           </div>
         </a>
         <a href="#">
           <div class="iconContainer phoneMessage">
-            <img src="./images/message.png" alt="Letter icon" class="PhoneTextIcons">
+            <img src="../images/message.png" alt="Letter icon" class="PhoneTextIcons">
           </div>
         </a>
       </div>
