--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="backgroundDiv">
     <div class="contentDiv">
       <div class="profilePictureDiv">
-        <img src="./images/perfil.jpg" alt="Photo of the creator" class="frontImg">
+        <img src="../images/perfil.jpg" alt="Photo of the creator" class="frontImg">
       </div>
       <h1>Leonardo Loureiro</h1>
       <p class="description">Front-end developer in training looking for challenges to keep learning!</p>
