--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </a>
         <a href="#">
           <div class="iconContainer phoneMessage">
-            <img src="./images/message.png" alt="Letter icon" class="PhoneTextIcons">
+            <img src="../images/message.png" alt="Letter icon" class="PhoneTextIcons">
           </div>
         </a>
       </div>
