--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="backgroundDiv">
     <div class="contentDiv">
       <div class="profilePictureDiv">
-        <img src="../images/perfil.jpg" alt="Photo of the creator" class="frontImg">
+        <img src="./images/perfil.jpg" alt="Photo of the creator" class="frontImg">
       </div>
       <h1>Leonardo Loureiro</h1>
       <p class="description">Front-end developer in training looking for challenges to keep learning!</p>
@@ -49,7 +49,7 @@
       <div class="TextCall">
         <a href="#">
           <div class="iconContainer phoneMessage">
-            <img src="../images/phone.png" alt="Phone icon" class="PhoneTextIcons">
+            <img src="./images/phone.png" alt="Phone icon" class="PhoneTextIcons">
           </div>
         </a>
         <a href="#">
